# Pre-canned types
fips_add_subdirectory(data)
fips_add_subdirectory(slam2d)
fips_add_subdirectory(slam3d)
fips_add_subdirectory(sba)


## TODO.   Not ported in first pass conversion to fips

# fips_add_subdirectory(sim3)
# fips_add_subdirectory(icp)
# fips_add_subdirectory(sclam2d)
#
# fips_add_subdirectory(slam2d_addons)
# fips_add_subdirectory(slam3d_addons)
#
# OPTION(G2O_BUILD_DEPRECATED_TYPES "Compile the deprecated types" OFF)
# IF(G2O_BUILD_DEPRECATED_TYPES)
#   fips_add_subdirectory(deprecated)
# ENDIF()
